# orbitscore

./: .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .npmrc  .orbitscore.json  .users_cache.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTRUCTIONS_NEW_DSL.md  LICENSE  PROJECT_RULES.md  README.md  WORK_LOG.md  package-lock.json  package.json  push_to_github.sh  push_to_signalcompose.sh  test-bugbot.md  test-commit.ts  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json
.claude/: config.json  license.local.md  next-session-prompt.md  settings.json
.claude/hooks/: README.md  post-compact.sh  pre-branch-check.sh  pre-commit-check.sh  pre-compact.sh  pre-edit-check.sh  session-start.md  session-start.sh
.claude/plans/: issue-108-rust-engine-client-phase1.md
.cursor/: BUGBOT.md
.github/: ISSUE_TEMPLATE.md
.husky/: pre-commit  pre-push
.serena/: project.yml
docs/: AUDIO_TEST_CHECKLIST.html  AUDIO_TEST_CHECKLIST.md  AUDIO_TEST_SETUP.html  AUDIO_TEST_SETUP.md  BEAT_METER_SPECIFICATION.md  COLLABORATION_FEATURE_PLAN.md  CURSOR_TEST_INSTRUCTIONS.html  CURSOR_TEST_INSTRUCTIONS.md  DSL_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_RECOMMENDATIONS.md  INDEX.md  INSTRUCTIONS_NEW_DSL.md  INSTRUCTION_ORBITSCORE_DSL.md  LINK_AUDIO_E2E_CHECKLIST.md  PERFORMANCE_TEST_GUIDE.html  PERFORMANCE_TEST_GUIDE.md  PERFORMANCE_TEST_REPORT.html  PERFORMANCE_TEST_REPORT.md  PROJECT_RULES.md  REFACTORING_PLAN.md  SERENA.md  SERENA_GUIDE.md  TOOL_SELECTION_GUIDE.md  USER_MANUAL.md  WORK_LOG.md
examples/: 01_getting_started.orbs  01_getting_started.osc  02_audio_manipulation.osc  03_polymeter_polytempo.orbs  03_polymeter_polytempo.osc  04_nested_rhythms.osc  05_drum_patterns_simple.osc  06_method_chaining.osc  07_audio_control.osc  08_timing_verification.osc  09_reserved_keywords.orbs  09_reserved_keywords.osc  10_link_audio.orbs  11_midi_degrees.orbs  12_chords_stacks.orbs  13_scope_chains.orbs  14_ties_legato.orbs  15_repetition_sections.orbs  16_expression.orbs  17_voicing_random.orbs  18_voicelead_comp.orbs  19_iac_linkaudio_coexist.orbs  20_gymnopedie_linkaudio.orbs  21_chorale_linkaudio.orbs  22_rust_engine_parity.orbs  README.md  advanced_examples.osc  audio-demo.osc  basic_examples.osc  debug-parser.osc  demo.osc  live-coding-test.osc  live-commands.txt  live-demo.orbs  live-demo.osc  live.osc  multi-track-test.osc  performance-demo.osc  performance-test-simple.osc  performance-test.osc  (+38 more)
rust/: .gitignore  Cargo.toml  README.md  deny.toml
rust-spike/clap-test-effect/: Cargo.toml
rust-spike/clap-test-effect/src/: lib.rs
rust-spike/clap-test-effect/tests/: load_test.rs
rust-spike/clap-test-synth/: Cargo.toml  bundle-macos.sh
rust-spike/clap-test-synth/src/: lib.rs
rust-spike/clap-test-synth/tests/: load_test.rs
rust/crates/orbit-audio-core/: Cargo.toml
rust/crates/orbit-audio-core/src/: engine.rs  lib.rs  sample.rs  scheduler.rs
rust/crates/orbit-audio-daemon/: Cargo.toml
rust/crates/orbit-audio-daemon/examples/: export_verify_pcm.rs
rust/crates/orbit-audio-daemon/src/: backend.rs  clap_host.rs  engine_wrap.rs  lib.rs  link_audio.rs  main.rs  outproc_effect.rs  protocol.rs  server.rs  session.rs
rust/crates/orbit-audio-daemon/tests/: clap_effect_gated.rs  clap_host_gated.rs  outproc_effect_gated.rs  protocol.rs  smoke.rs  verify_schedule_pcm.rs
rust/crates/orbit-audio-daemon/tests/common/: mod.rs
rust/crates/orbit-audio-native/: Cargo.toml
rust/crates/orbit-audio-native/examples/: poc_play.rs
rust/crates/orbit-audio-native/src/: lib.rs  link_audio_ring.rs  loader.rs  output.rs  post_processor.rs  resampler.rs
rust/crates/orbit-audio-sandbox/: Cargo.toml
rust/crates/orbit-audio-sandbox/src/: child.rs  host.rs  lib.rs  offline.rs  transport.rs
rust/crates/orbit-audio-sandbox/tests/: host_child_integration.rs  parity.rs
rust/crates/orbit-audio-verify/: Cargo.toml
rust/crates/orbit-audio-verify/src/: analysis.rs  capture.rs  lib.rs  onset.rs
rust/crates/orbit-audio-verify/tests/: chop_region_real_wav.rs  onset_fade_capture.rs  pan_real_wav.rs  per_slice_gain.rs
rust/crates/orbit-audio-wasm/: Cargo.toml
rust/crates/orbit-audio-wasm/src/: lib.rs
rust/crates/orbit-clap-effect-child/: Cargo.toml
rust/crates/orbit-clap-effect-child/src/: main.rs
rust/crates/orbit-clap-effect-child/tests/: cli.rs  effect_parity_gated.rs  roundtrip_latency_gated.rs
rust/crates/orbit-clap-host/: Cargo.toml
rust/crates/orbit-clap-host/src/: buffers.rs  config.rs  controller.rs  discovery.rs  effect.rs  events.rs  host.rs  lib.rs  processor.rs
rust/crates/orbit-clap-host/tests/: effect_processor_smoke_gated.rs
rust/crates/orbit-clap-spike/: Cargo.toml
rust/crates/orbit-clap-spike/src/: audio.rs  buffers.rs  config.rs  discovery.rs  events.rs  host.rs  main.rs  sink.rs
rust/crates/orbit-link-audio/: Cargo.toml  build.rs
rust/crates/orbit-link-audio/shim/: orbit_link_shim.cpp  orbit_link_shim.hpp
rust/crates/orbit-link-audio/src/: egress.rs  lib.rs  verification.rs
rust/crates/orbit-sandbox/: Cargo.toml
rust/crates/orbit-sandbox-spike/: Cargo.toml
rust/crates/orbit-sandbox-spike/src/: lib.rs
rust/crates/orbit-sandbox/src/: child.rs  host.rs  lib.rs  shared.rs
rust/examples/: poc_play.rs
rust/src/: lib.rs
rust/src/core/: engine.rs  mod.rs  sample.rs  scheduler.rs
rust/src/native/: loader.rs  mod.rs  output.rs  resampler.rs
rust/src/wasm/: mod.rs
scripts/: assemble-gymnopedie-vars.js  assemble-linkaudio-coexist.js  extract-scsynth-bundle.sh  install-engine-deps.sh  patch-supercolliderjs.sh  qa-midi-smoke.sh  slack_fetch_latest.js  slack_fetch_mentions.js  slack_notify.js  verify-bundle.sh
test-assets/: README.md  generate-test-audio.js  package-lock.json  package.json
test-audio/: 01_initialization.osc  02_global_params.orbs  02_global_params.osc  05_transport_commands.orbs  07_underscore_prefix.osc  09_integration.orbs
tests/: golden-ir.json
tmp/: github-issue-body.md  pr-body.txt
tools/: max-telemetry-server.js  telemetry-inspect.js
(+482 files in other folders)
