[workspace]
resolver = "2"
members = [
  "crates/orbit-audio-core",
  "crates/orbit-audio-native",
  "crates/orbit-audio-wasm",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-Signal-compose-FairTrade-1.0"
repository = "https://github.com/signalcompose/orbitscore"
authors = ["Signal compose Inc."]

[workspace.dependencies]
thiserror = "2.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "mp3", "aac", "isomp4"] }
rubato = "2"
audioadapter-buffers = "3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletProcessor",
] }
console_error_panic_hook = "0.1"
hound = "3.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
