[workspace]
resolver = "2"
members = [
  "crates/orbit-audio-core",
  "crates/orbit-audio-native",
  "crates/orbit-audio-wasm",
  "crates/orbit-audio-daemon",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-Signal-compose-FairTrade-1.0"
repository = "https://github.com/signalcompose/orbitscore"
authors = ["Signal compose Inc."]

[workspace.dependencies]
thiserror = "2.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "mp3", "aac", "isomp4"] }
rubato = "2"
audioadapter-buffers = "3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletProcessor",
] }
console_error_panic_hook = "0.1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
