[workspace]
resolver = "2"
members = [
  "crates/orbit-audio-core",
  "crates/orbit-audio-native",
  "crates/orbit-audio-wasm",
  "crates/orbit-audio-daemon",
  "crates/orbit-audio-verify",
  "crates/orbit-clap-spike",
]
# 🔴 orbit-link-audio(GPL 隔離 crate)は **member にしない**。
# member にすると default の `cargo build` / cargo-deny がこの GPL crate を root として
# 常にビルド/評価し、「default 依存グラフは GPL-free」という不変条件が assert できなくなる。
# daemon が feature `link-audio`(default off)経由で optional dep として取り込むときだけ
# graph に入る。permissive crate が誤って依存すれば dep として graph に現れ cargo-deny が検出する。
exclude = [
  "crates/orbit-link-audio",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-Signal-compose-FairTrade-1.0"
repository = "https://github.com/signalcompose/orbitscore"
authors = ["Signal compose Inc."]

[workspace.dependencies]
thiserror = "2.0"
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "mp3", "aac", "isomp4"] }
rubato = "2"
audioadapter-buffers = "3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletProcessor",
] }
console_error_panic_hook = "0.1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
