[package]
name = "orbit-audio-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Signal compose audio engine daemon exposing WebSocket IPC (protocol v0.1)"

[lib]
name = "orbit_audio_daemon"
path = "src/lib.rs"

[[bin]]
name = "orbit-audio-daemon"
path = "src/main.rs"

[features]
# 🔴 GPL feature。**default off**。有効化すると Ableton Link(GPL-2.0-or-later)が
# 依存グラフに入る。permissive な engine core はこの feature に依存しない。
link-audio = ["dep:orbit-link-audio"]

[dependencies]
orbit-audio-core = { path = "../orbit-audio-core" }
orbit-audio-native = { path = "../orbit-audio-native" }
# GPL 隔離 crate。feature `link-audio` 経由でのみ取り込む optional dep。
orbit-link-audio = { path = "../orbit-link-audio", optional = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# #311 phase 2 Leg 1: golden schedule を play_at でオフラインレンダし PCM を解析する検証に
# phase-1 の assertion lib を再利用する（test-only）。
orbit-audio-verify = { path = "../orbit-audio-verify" }
