[package]
name = "orbit-audio-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Signal compose audio engine daemon exposing WebSocket IPC (protocol v0.1)"

[lib]
name = "orbit_audio_daemon"
path = "src/lib.rs"

[[bin]]
name = "orbit-audio-daemon"
path = "src/main.rs"

[features]
# 🔴 GPL feature。**default off**。有効化すると Ableton Link(GPL-2.0-or-later)が
# 依存グラフに入る。permissive な engine core はこの feature に依存しない。
# rtrb は permissive(MIT/Apache)だが、reg-ring producer 型を名指すのは link-audio 経路のみ
# なので feature に括る（default ビルドの依存グラフを増やさない）。
link-audio = ["dep:orbit-link-audio", "dep:rtrb"]
# 層B テスト専用 feature（**default off**）。実 cpal callback 駆動の egress を別 LinkAudio
# インスタンス(receiver)で headless 検証する unit test を有効化する。orbit-link-audio の
# verification receiver を引き込む。production link-audio には verification を出さない。
# default off なので cargo-deny の "default graph は GPL-free" 不変条件には影響しない。
link-audio-verification = ["link-audio", "orbit-link-audio/verification-receiver"]
# CLAP plugin hosting（Issue #340・default off・permissive）。in-process で CLAP プラグインを
# daemon の cpal callback（native の PostProcessor seam 経由）に統合する。orbit-clap-host は
# permissive（clack=MIT/Apache）なので GPL 隔離は不要だが、clack/install-ring を default 依存
# グラフに足さないよう feature に括る。**現状 link-audio とは併用不可**（combined callback の
# render 順序は defer・engine_wrap.rs の compile_error 参照）。
clap-host = ["dep:orbit-clap-host", "dep:rtrb"]
# γ M1 PR-C: out-of-process effect（別プロセスで実 CLAP effect を host・default off・**clack-free**）。
# daemon は orbit-audio-sandbox の transport（file-backed mmap MAP_SHARED・memmap2 のみ）を使い、
# effect child binary（orbit-clap-effect-child）を **subprocess として spawn** する（cargo-depend
# しない＝daemon の依存グラフは clack-free のまま。clack は spawn された child プロセス内だけに閉じる）。
# master-bus post-processor 経路なので clap-host / link-audio と併用不可（engine_wrap.rs の compile_error）。
outproc-effect = ["dep:orbit-audio-sandbox"]

[dependencies]
orbit-audio-core = { path = "../orbit-audio-core" }
orbit-audio-native = { path = "../orbit-audio-native" }
# GPL 隔離 crate。feature `link-audio` 経由でのみ取り込む optional dep。
orbit-link-audio = { path = "../orbit-link-audio", optional = true }
# in-process CLAP hosting library（permissive）。feature `clap-host` 経由でのみ取り込む。
orbit-clap-host = { path = "../orbit-clap-host", optional = true }
# out-of-process effect transport（**clack-free**・memmap2 のみ）。feature `outproc-effect` 経由で
# のみ取り込む。実 CLAP は spawn する child（orbit-clap-effect-child）が host し、daemon は clack を
# リンクしない（`cargo tree -p orbit-audio-daemon --features outproc-effect` に clack が現れないこと）。
orbit-audio-sandbox = { path = "../orbit-audio-sandbox", optional = true }
# reg-ring / install-ring / event-ring producer を名指すため。link-audio / clap-host 経路専用。
rtrb = { version = "0.3", optional = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# #311 phase 2 Leg 1: golden schedule を play_at でオフラインレンダし PCM を解析する検証に
# phase-1 の assertion lib を再利用する（test-only）。
orbit-audio-verify = { path = "../orbit-audio-verify" }
