[package]
name = "orbit-audio-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native (desktop) audio backend for Signal compose audio engine (cpal + symphonia + rubato)"

[lib]
name = "orbit_audio_native"

[dependencies]
orbit-audio-core = { path = "../orbit-audio-core" }
thiserror = { workspace = true }
cpal = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
audioadapter-buffers = { workspace = true }
# LinkAudio egress 用の lock-free ring。permissive(MIT/Apache)。producer 側(RT callback)を
# native が持ち、consumer 側(Consumer<f32>)は GPL の orbit-link-audio が drain する(A4-2b-2)。
rtrb = "0.3"
# RT callback で N channel の render_multi 引数(&mut [(&str, &mut [f32])])を heap alloc なしに
# stack 上で組むため(A4-2b-2b)。permissive(MIT/Apache)。
arrayvec = "0.7"
